<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">



    <LinearLayout
        android:id="@+id/rootinstagram_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="15dp">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/headings"
        android:layout_gravity="center_horizontal"
        android:text="@string/heading_instagram"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        style="@style/textUrl"
        android:text="@string/url_text_instagram"
      />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/rootgithub_layout"
        android:layout_below="@id/rootinstagram_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="35dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/headings"
            android:layout_gravity="center_horizontal"
            android:text="@string/heading_github"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:padding="5dp"
            style="@style/textUrl"
            android:text="@string/url_text_github"
            />
    </LinearLayout>

    <Button
        android:id="@+id/snackbar"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:text="@string/button_text"
        android:onClick="onclickSnackbar"/>
</RelativeLayout>